--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Text analyzer</title>
     <meta charset="utf-8">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
     <div class="container">
         <main>
             <h1>Text analzyer</h1>
             <p>Paste in text below, submit, and get some basic stats back.</p>
-            <form>
+            <form class="textform">
                 <div>
                     <label for="user-text">Text to analyze</label>
                     <textarea cols="60" rows="20" id="user-text" name="user-text" placeholder="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." required></textarea>
@@ -22,23 +24,44 @@
                 </div>
             </form>
 
-            <dl class="hidden text-report">
+
+
+            <dl class="hidden text-report js-text-report">
                 <dt>Word count</dt>
-                <dd></dd>
+                <dd class="wordscount"></dd>
 
                 <dt>Unique word count</dt>
-                <dd></dd>
+                <dd class="uniquewordscount"></dd>
 
                 <dt>Average word length</dt>
-                <dd></dd>
+                <dd class="averagewordslength"></dd>
 
                 <dt>Average sentence length</dt>
-                <dd></dd>
+                <dd class="averagesentenceslength"></dd>
             </dl>
+
+
+
+            <!--
+            <dl class="text-report">
+                <dt>Word count</dt>
+                <dd id="wordcount"></dd>
+
+                <dt>Unique word count</dt>
+                <dd id="uniquewordcount">0</dd>
+
+                <dt>Average word length</dt>
+                <dd id="averagewordlength">0</dd>
+
+                <dt>Average sentence length</dt>
+                <dd id="averagesentencelength">0</dd>
+            </dl>
+-->
         </main>
     </div>
 
-    <!-- link to jquery -->
-    <!-- link to your app.js -->
+    <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
